--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,24 @@
-<h1>Make your form here</h1>
+<h1>Pirate Creation Page</h1>
+<% Pirate.clear
+    Ship.clear %>
+<form method="post" action="/pirates">
+  Name:
+  <input id="pirate[name]" type="text"  name="pirate[name]"> <br>
+  Weight:
+  <input id="pirate[weight]" type="text"  name="pirate[weight]"> <br>
+  Height:
+  <input id="pirate[height]" type="text"  name="pirate[height]"> <br>
+  Ship Name:
+  <input id="ship_name_1" type="text" name="pirate[ships][][name]"> <br>
+  Ship Type:
+  <input id="ship_type_1" type="text"  name="pirate[ships][][type]"> <br>
+  Ship Booty Type:
+  <input id="ship_booty_1" type="text"  name="pirate[ships][][booty]"> <br>
+  Ship Name:
+  <input id="ship_name_2" type="text" name="pirate[ships][][name]"> <br>
+  Ship Type:
+  <input id="ship_type_2" type="text"  name="pirate[ships][][type]"> <br>
+  Ship Booty Type:
+  <input id="ship_booty_2" type="text"  name="pirate[ships][][booty]"> <br>
+  <input type="submit" value="Submit">
+</form>
