--- a/views/pirates/show.erb
+++ b/views/pirates/show.erb
@@ -1,7 +1,20 @@
-<h1>Display your Pirate here</h1>
+<% pirate = Pirate.all[0] %>
 
+<body>
+    
+<h1><%= pirate.name%> </h1>
+<h2>
+<li>Height: <%= pirate.height %></li>
+<li>Weight: <%= pirate.weight %></li>
+</h2>
 
-<h2>Display your first ship here</h2>
-
-
-<h2>Display your second ship here</h2>
+<% i = 0 %>
+<% pirate.ships.each do |ship| %>
+    <p>Ship <%=i%>
+        <li>Name: <%=ship.name%></li>
+        <li>Type: <%=ship.type%></li>
+        <li>Booty type: <%=ship.booty%></li>
+    </p>
+    <% i += 1 %>
+<% end %>
+</body>
